--- a/applicator.json
+++ b/applicator.json
@@ -7,6 +7,14 @@
 
   "category": "audio|video|stream|web",
 
+  "contacts": {
+    "email" : "example@email.com",
+    "telegram" : "https://t.me/helpiptv"
+  },
+
+  "server": {
+    "url": "example.ru"
+  },
 
 
   "homepage": {
