--- a/applicator.json
+++ b/applicator.json
@@ -1,5 +1,5 @@
 {
-  "namespace": "app/applicator",
+  "namespace": "baks-dev/applicator",
   "lang": "ru_RU",
   "languageCode": "ru",
   "countryCode": "RU",
