--- a/applicator.json
+++ b/applicator.json
@@ -7,7 +7,7 @@
 
   "title" : "Аппликатор",
   "desc" : "Описание приложения Аппликатор",
-  "image" : "https://commondatastorage.googleapis.com/android-tv/Sample%20videos/Zeitgeist/Zeitgeist%202010_%20Year%20in%20Review/card.jpg",
+  "image" : "card.jpg",
 
   "category": "audio|video|stream|web",
 
